javadoc GestioneListe