@@ -5,22 +5,58 @@ import java.util.List;
 
 import modello.exception.GestioneListeException;
 
+/**
+ * La classe {@code GestioneListe} funge da centro di controllo statico per l'intero sistema
+ * <p> Gestisce centralmente:
+ * <ul>
+ *   <li>L'elenco globale di tutte le liste create ({@code listeArticoli})</li>
+ *   <li>L'anagrafica di tutte le categorie merceologiche disponibili</li>
+ *   <li>Il registro di tutti gli articoli inseriti nel sistema</li>
+ * </ul>
+ * 
+ * @author Angie Albitres
+ */
 public class GestioneListe {
-	// VARIABILI
-	private static List<ListaDiArticoli> listeArticoli; 	//tutte le liste
-	private static List<String> categorie; 				//tutte le categorie
-	private static List<Articolo> articoli; 				//tutti gli articoli
+	/**
+	 * Elenco di tutte le liste di articoli gestite dal sistema
+	 */
+	private static List<ListaDiArticoli> listeArticoli; 
+	/**
+	 * Elenco delle categorie merceologiche definite dall'utente
+	 */
+	private static List<String> categorie; 
+	/**
+	 * Registro globale di tutti gli articoli esistenti nel sistema
+	 */
+	private static List<Articolo> articoli; 
 	
+	/**
+	 * Nome della categoria predefinita assegnata agli articoli non categorizzati
+	 */
 	public static final String CATEGORIA_DEFAULT = "Non categorizzato";
 	
 	static {
 		reset();	
 	}
-	
-	// METODI
-	
-	// - Lista
-	// insersci lista
+	/**
+	 * Ripristina lo stato iniziale del sistema creando nuove liste vuote
+	 * La categoria di default viene aggiunta automaticamente
+	 */
+	public static void reset() {
+		listeArticoli = new ArrayList<ListaDiArticoli>();
+		categorie = new ArrayList<String>();
+		articoli = new ArrayList<Articolo>();
+		
+		categorie.add(CATEGORIA_DEFAULT);
+	}
+
+	/**
+	 * Aggiunge una nuova lista al sistema verificando che non ne esista già una con lo stesso nome
+	 * 
+	 * @param list L'oggetto {@code ListaDiArticoli} da inserire
+	 * 
+	 * @throws GestioneListeException Viene lanciata se la lista è nulla o se il nome è già presente
+	 */
 	public static void inserisciLista(ListaDiArticoli list) throws GestioneListeException{
 		if (list == null)
 			throw new GestioneListeException("La lista non può essere nulla");
@@ -31,9 +67,15 @@ public class GestioneListe {
 		listeArticoli.add(list);
 	}	
 		
-	// cancella lista
+	/**
+	 * Rimuove definitivamente una lista dal sistema cercandola per nome
+	 * 
+	 * @param nome Il nome della lista da eliminare
+	 * 
+	 * @throws GestioneListeException Viene lanciata se il nome è vuoto o se la lista non viene trovata
+	 */
 	public static void cancellaLista(String nome) throws GestioneListeException {
-		if(nome== null ||nome.trim().isEmpty()) 
+		if(nome== null ||nome.isBlank()) 
 			throw new GestioneListeException("Il nome della lista non può essere vuoto");
 		
 		ListaDiArticoli listCanc = trovaListaPerNome(nome);
@@ -44,10 +86,18 @@ public class GestioneListe {
 		listeArticoli.remove(listCanc);
 	}
 	
-	
+	/**
+	 * Ricerca e restituisce una lista specifica tramite il suo nome
+	 * 
+	 * @param nome Il nome della lista da cercare
+	 * 
+	 * @return L'oggetto {@code ListaDiArticoli} corrispondente
+	 * 
+	 * @throws GestioneListeException Viene lanciata se il nome è vuoto o se la lista non esiste
+	 */
 	public static ListaDiArticoli matchLista(String nome) throws GestioneListeException {
-		if(nome== null ||nome.trim().isEmpty()) 
-			throw new GestioneListeException("Il nome dellalista non può essere vuoto");
+		if(nome== null ||nome.isBlank()) 
+			throw new GestioneListeException("Il nome della lista non può essere vuoto");
 		
 		ListaDiArticoli listaTrovata = trovaListaPerNome(nome);
         if (listaTrovata == null)
@@ -55,24 +105,34 @@ public class GestioneListe {
         
         return listaTrovata;
 	}
-	
-	// trova lista per nome
+	/**
+	 * Metodo interno per la ricerca di una lista nell'elenco statico
+	 * 
+	 * @param nome Nome della lista da trovare
+	 * 
+	 * @return Il riferimento alla lista se trovata, {@code null} altrimenti
+	 */
 	private static ListaDiArticoli trovaListaPerNome(String nome) {
         if (nome == null) 
         		return null;
         
         for (ListaDiArticoli l : listeArticoli) {
-            if (l.getNome().equals(nome)) {
+            if (l.getNome().equalsIgnoreCase(nome)) {
                 return l;
             }
         }
-        return null; // Non trovata
+        return null; 
     }
 
-	// - Categoria
-	// aggiunta categoria
+	/**
+	 * Registra una nuova categoria nel sistema
+	 * 
+	 * @param nome Il nome della categoria da aggiungere
+	 * 
+	 * @throws GestioneListeException Viene lanciata se il nome è vuoto o se la categoria esiste già
+	 */
 	public static void inserisciCategoria(String nome) throws GestioneListeException {
-		if(nome== null ||nome.trim().isEmpty()) 
+		if(nome== null ||nome.isBlank()) 
 			throw new GestioneListeException("Il nome della categoria non può essere vuoto");
 		
 		if(categorie.contains(nome)) 
@@ -81,26 +141,46 @@ public class GestioneListe {
 		categorie.add(nome);
 	}
 	
+	/**
+	 * Rimuove una categoria dall'anagrafica
+	 * Non è permesso rimuovere la categoria di default
+	 * 
+	 * @param nome Il nome della categoria da eliminare
+	 * 
+	 * @throws GestioneListeException Viene lanciata se la categoria è quella di default o se non esiste
+	 */
 	public static void cancellaCategoria(String nome) throws GestioneListeException {
-		if(nome== null ||nome.trim().isEmpty()) 
+		if(nome== null ||nome.isBlank()) 
 			throw new GestioneListeException("Il nome della categoria non può essere vuoto");
 		
 		if(!categorie.contains(nome)) 
 			throw new GestioneListeException("Categoria non trovata");
 		
-		if(nome.equals("Non categorizzato"))
+		if(nome.equals(CATEGORIA_DEFAULT))
 			throw new GestioneListeException("Non è possibile cancellare la categoria di default");
 		
 		categorie.remove(nome);
 	}
 	
-	// esiste categoria
+	/**
+	 * Verifica la presenza di una categoria nell'anagrafica di sistema
+	 * 
+	 * @param nome Il nome della categoria da controllare
+	 * 
+	 * @return true se la categoria esiste, false altrimenti
+	 */
 	public static boolean esisteCategoria(String nome) {
 	    return categorie.contains(nome);
 	}
 	
-	// - Articoli
-	// aggiunta di un articolo
+	/**
+	 * Inserisce un nuovo articolo nel registro globale
+	 * Se la categoria dell'articolo non esiste, viene creata automaticamente
+	 * 
+	 * @param a L'oggetto {@code Articolo} da registrare
+	 * 
+	 * @throws GestioneListeException Viene lanciata se l'articolo è già presente nel registro
+	 */
 	public static void inserisciArticolo(Articolo a) throws GestioneListeException {
 	    if (articoli.contains(a))
 	        throw new GestioneListeException("Articolo già esistente");
@@ -114,19 +194,17 @@ public class GestioneListe {
 	    articoli.add(a);
 	}
 	
+	/**
+	 * Rimuove un articolo dal registro globale del sistema
+	 * 
+	 * @param a L'articolo da eliminare
+	 * 
+	 * @throws GestioneListeException Viene lanciata se l'articolo non è presente nel registro
+	 */
 	public static void cancellaArticolo(Articolo a) throws GestioneListeException {
 		if(!articoli.contains(a))
 			throw new GestioneListeException("Articolo non trovato");
 		
 		articoli.remove(a);
-	}
-	
-	// - Reset
-	public static void reset() {
-		listeArticoli = new ArrayList<ListaDiArticoli>();
-		categorie = new ArrayList<String>();
-		articoli = new ArrayList<Articolo>();
-		
-		categorie.add(CATEGORIA_DEFAULT);
 	}
 }
